# Drasil-Engine

./: .gitignore  CMakeLists.txt  Makefile  TODO.md  TestScene.hpp  clean  clean.sh  client.cpp  drasilGenerate.sh  gen_drasil.sh  gen_menu.sh  gen_nexus.sh  gen_sfml.sh  generate.sh  main.cpp  nexusGenerate.sh  server.cpp
Components/: Active.hpp  Components.hpp  Gravity.hpp  GravityComponent.hpp  InputComponent.hpp  NetworkComponent.hpp  ReplicatedComponent.hpp  RigidBody.hpp  RigidBodyComponent.hpp  StatusComponent.hpp  Thrust.hpp  Transform.hpp  TransformComponent.hpp
Components/Render/: RenderComponent.hpp
Core/: Coordinator.cpp  Coordinator.hpp  Scene.cpp  Scene.hpp  SceneManager.hpp
Core/Component/: ComponentArray.hpp  ComponentManager.hpp
Core/Coordinator/: Coordinator.cpp  Coordinator.hpp
Core/Drasil/: Drasil.cpp  Drasil.hpp
Core/Entity/: EntityManager.hpp
Core/Event/: Event.hpp  EventManager.hpp
Core/Level/: Level.cpp  Level.hpp  LevelManager.cpp  LevelManager.hpp
Core/Manager/: Manager.cpp  Manager.hpp
Core/System/: System.hpp  SystemManager.hpp
Drasil/: Actors.hpp  CMakeLists.txt  Components.hpp  Core.hpp  Drasil.hpp  Game.hpp  Interface.hpp  Systems.hpp  TestScene.hpp  Tools.hpp  Types.hpp  Utils.hpp
Drasil/Actors/: Actors.hpp
Drasil/Actors/Actor/: Actor.cpp  Actor.hpp
Drasil/Actors/Button/: Button.cpp  Button.hpp
Drasil/Actors/Pawn/: Pawn.cpp  Pawn.hpp
Drasil/Actors/Player/: Player.cpp  Player.hpp
Drasil/Actors/Sprite/: Sprite.cpp  Sprite.hpp
Drasil/Actors/Text/: Text.cpp
Drasil/Common/: Common.hpp  LogManager.hpp
Drasil/Common/Interfaces/: IReplicable.hpp
Drasil/Common/Types/: ECS.hpp  Event.hpp  EventData.hpp  EventTypes.hpp  SafeQueue.hpp  Types.hpp
Drasil/Components/: GravityComponent.hpp  InputComponent.hpp  MovementComponent.hpp  RigidBodyComponent.hpp  TransformComponent.hpp
Drasil/Components/Render/: RenderComponent.hpp
Drasil/Core/Component/: ComponentArray.hpp  ComponentManager.hpp
Drasil/Core/Coordinator/: BaseCoordinator.cpp  BaseCoordinator.hpp  Coordinator.cpp  Coordinator.hpp
Drasil/Core/Drasil/: Core.cpp  Core.hpp  Drasil.cpp  Drasil.hpp
Drasil/Core/Entity/: EntityManager.hpp
Drasil/Core/Event/: Event.hpp  EventManager.cpp  EventManager.hpp
Drasil/Core/Level/: Level.cpp  Level.hpp
Drasil/Core/System/: System.hpp  SystemManager.hpp
Drasil/Engine/Components/: Components.hpp  GravityComponent.hpp  MovementComponent.hpp  NetworkComponent.hpp  RenderComponent.hpp  TransformComponent.hpp
Drasil/Engine/Coordinator/: Coordinator.cpp  Coordinator.hpp  Macro.hpp
Drasil/Engine/Coordinator/BaseCoordinator/: BaseCoordinator.cpp  BaseCoordinator.hpp
Drasil/Engine/Core/: Core.cpp  Core.hpp
Drasil/Engine/Level/: Level.cpp  Level.hpp
Drasil/Engine/Managers/Component/: ComponentArray.hpp  ComponentManager.hpp
Drasil/Engine/Managers/Entity/: EntityManager.hpp
Drasil/Engine/Managers/Event/: EventManager.cpp  EventManager.hpp
Drasil/Engine/Managers/Level/: LevelManager.hpp
Drasil/Engine/Managers/System/: SystemManager.hpp
Drasil/Engine/Systems/: ASystem.hpp  Systems.hpp
Drasil/Engine/Systems/Network/: INetworkSystem.hpp  NetworkSystem.cpp  NetworkSystem.hpp
Drasil/Engine/Systems/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
Drasil/Engine/Systems/PlayerController/: PlayerControlSystem.cpp  PlayerControlSystem.hpp
Drasil/Engine/Systems/Render/: ARenderSystem.cpp  ARenderSystem.hpp
Drasil/Game/: Actor.cpp  Actor.hpp  Player.cpp  Player.hpp
Drasil/Game/Actor/: Actor.cpp  Actor.hpp
Drasil/Game/Button/: Button.cpp  Button.hpp
Drasil/Game/Pawn/: Pawn.hpp
Drasil/Game/Player/: Player.cpp  Player.hpp
Drasil/Game/Sprite/: Sprite.cpp  Sprite.hpp
Drasil/Game/Text/: Text.cpp  Text.hpp
Drasil/Interface/: IReplicated.hpp
Drasil/Systems/Network/: NetworkSystem.cpp  NetworkSystem.hpp
Drasil/Systems/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
Drasil/Systems/PlayerController/: PlayerControlSystem.cpp  PlayerControlSystem.hpp
Drasil/Systems/Render/: ARenderSystem.cpp  ARenderSystem.hpp  IRenderSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
Drasil/Systems/Render/Manager/: Manager.cpp  Manager.hpp
Drasil/Tools/: DynamicLoader.hpp  LogManager.hpp  Macro.hpp  SafeVector.hpp
Drasil/Types/: ECS.hpp  EventData.hpp  EventTypes.hpp
Drasil/Types/Maths/: Vec2.hpp  Vec3.hpp
Drasil/Utils/: Macro.hpp
Game/: Actor.cpp  Actor.hpp  Player.cpp  Player.hpp
Games/Menu/: CMakelists.txt  Menu.cpp  Menu.hpp
Graphicals/SFML/: CMakelists.txt  SfmlRenderSystem.cpp  SfmlRenderSystem.hpp
Graphicals/SFML/Manager/: Manager.hpp
Interface/: IReplicated.hpp
Nexus/: CMakelists.txt  MyLevel.hpp  main.cpp
SampleGame/: CMakelists.txt  TestScene.hpp  client.cpp  log  main.cpp  server.cpp
SampleGame/Game/Parallax/: Parallax.cpp  Parallax.hpp
Systems/: NetworkSystem.cpp  NetworkSystem.hpp  Systems.hpp
Systems/Network/: INetworkSystem.hpp  NetworkSystem.cpp  NetworkSystem.hpp  Packet.hpp
Systems/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
Systems/PlayerController/: PlayerControlSystem.cpp  PlayerControlSystem.hpp
Systems/Render/: IRenderSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
TestGame/: EntityFactory.cpp  EntityFactory.hpp
Tools/: Macro.hpp  SafeQueue.hpp  SafeVector.hpp
Types/: ECS.hpp
Types/Maths/: Vec2.hpp  Vec4.hpp
